Extrude, immediate scale #39756

Closed
opened 2014-04-16 13:29:14 +02:00 by Joe_M · 15 comments
Joe_M commented 2014-04-16 13:29:14 +02:00 (Migrated from localhost:3001)

System Information
iMac, OSX 10.9.2

Blender Version
2.7.0 March 19

Short description of error
Scaling does not work after extrude, neither by mouse, nor typing in numeric values.

Exact steps for others to reproduce the error
Select object, switch to edit mode, choose face editing, select a single face, press E (for extrude) than immediately press S (for scaling the extruded face). The scaling mouse pointer appears, but does not work. When typing in scale factor, scaling does not occur. It only works by hitting enter (confirming extrusion) and then hitting S for scaling on the still selected face.

Dokumentation says, S can be pressed to switch from dragging to scaling immediately. Also the mouse pointer for scaling appears, which indicates that the scale mode is somehow active. But moving mouse does not change scaling. When dragging mouse (LMB), scaling mouse pointer disappears.

**System Information** iMac, OSX 10.9.2 **Blender Version** 2.7.0 March 19 **Short description of error** Scaling does not work after extrude, neither by mouse, nor typing in numeric values. **Exact steps for others to reproduce the error** Select object, switch to edit mode, choose face editing, select a single face, press E (for extrude) than immediately press S (for scaling the extruded face). The scaling mouse pointer appears, but does not work. When typing in scale factor, scaling does not occur. It only works by hitting enter (confirming extrusion) and then hitting S for scaling on the still selected face. Dokumentation says, S can be pressed to switch from dragging to scaling immediately. Also the mouse pointer for scaling appears, which indicates that the scale mode is somehow active. But moving mouse does not change scaling. When dragging mouse (LMB), scaling mouse pointer disappears.
Joe_M commented 2014-04-16 13:29:14 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Joe_M commented 2014-04-16 13:29:14 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @Joe_M

Added subscriber: @Joe_M

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@Joe_M

  • Can you try this after resetting to factory defaults?
  • If this doesn't happen on the default cube, please upload a blend file.
@Joe_M - Can you try this after resetting to factory defaults? - If this doesn't happen on the default cube, please upload a blend file.
Author

This issue was referenced by blender/blender-addons-contrib@53fd22acb4

This issue was referenced by blender/blender-addons-contrib@53fd22acb4d3c1bf7164d1ecdda97c6f66e5be7a
Author

This issue was referenced by 53fd22acb4

This issue was referenced by 53fd22acb4d3c1bf7164d1ecdda97c6f66e5be7a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 53fd22acb4.

Closed by commit 53fd22acb4.
Joe_M commented 2014-04-17 09:07:53 +02:00 (Migrated from localhost:3001)
Author

Why was this bug set to resolved. Nothing is resolved. Something essential does not work. The next 4 days I am not at home and cannot send you the blend file. But this E and S does not work! Could you reproduce it?

Why was this bug set to resolved. Nothing is resolved. Something essential does not work. The next 4 days I am not at home and cannot send you the blend file. But this E and S does not work! Could you reproduce it?

@Joe_M, did you check a recent build? - I tested again and its working as expected.

But this is also a reason you should really submit blend files with your reports.

@Joe_M, did you check a recent build? - I tested again and its working as expected. But this is also a reason you should really submit blend files with your reports.
Joe_M commented 2014-04-24 14:07:40 +02:00 (Migrated from localhost:3001)
Author

I reinstalled Blender. Current version 2.7.0.

I resetted to factory settings. Meanwhile I am also using a 3 button mouse instead of magic mouse.
My scenario: Added new cube, tab to edit mode. Select top face. Then: Pressing E and S (without any action in-between).
After this I can see in header "Scale: 1.000 1.000 1.000 normal" but entering numeric values does not work. The scaling mouse pointer and scaling radius line also appears but mouse action does not scale anything.

If I cancel the not-working scale operation and press S again, I get another header info: "Scale X: 1.0000 Y: 1.0000 Z: 1.0000" and scaling works.
It also works if I press the sequence E, S, Z or E, Enter/ESC, S.

Here my .blend-file...

Scaling.blend

I reinstalled Blender. Current version 2.7.0. I resetted to factory settings. Meanwhile I am also using a 3 button mouse instead of magic mouse. My scenario: Added new cube, tab to edit mode. Select top face. Then: Pressing E and S (without any action in-between). After this I can see in header "Scale: 1.000 1.000 1.000 normal" but entering numeric values does not work. The scaling mouse pointer and scaling radius line also appears but mouse action does not scale anything. If I cancel the not-working scale operation and press S again, I get another header info: "Scale X: 1.0000 Y: 1.0000 Z: 1.0000" and scaling works. It also works if I press the sequence E, S, Z or E, Enter/ESC, S. Here my .blend-file... [Scaling.blend](https://archive.blender.org/developer/F85797/Scaling.blend)

@Joe_M, your test file works for me, but you'll need a newer build then the 2.70a relerase.

Try: http://builder.blender.org/download

@Joe_M, your test file works for me, but you'll need a newer build then the 2.70a relerase. Try: http://builder.blender.org/download
Joe_M commented 2014-04-25 09:03:57 +02:00 (Migrated from localhost:3001)
Author

I downloaded the build 2.70 April 24 and it works! Thank you very much!

I misunderstood your response from April 16th thinking you mean there is nothing to fix.

Blender is a wonderful piece of software and all the developers do a great job!

I downloaded the build 2.70 April 24 and it works! Thank you very much! I misunderstood your response from April 16th thinking you mean there is nothing to fix. Blender is a wonderful piece of software and all the developers do a great job!

No worries Joe, we know this tracker isn't always totally obvious what goes on.

The message on Thu, Apr 17:


Closed by commit 53fd22acb4.


... is an automated way for us to commit and close reports, if you click on the link you can see what changes were involved with making the fix.

No worries Joe, we know this tracker isn't always totally obvious what goes on. The message on Thu, Apr 17: ---- Closed by commit 53fd22acb4. ---- ... is an automated way for us to commit and close reports, if you click on the link you can see what changes were involved with making the fix.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39756
No description provided.