Fix T39756: Extrude, immediate scale

While not exactly a bug, switching to scale isnt generally useful to keep normal constraint.