source/blender/editors/transform/transform.c
@@ -1067,6 +1067,12 @@ int transformEvent(TransInfo *t, const wmEvent *event)
 			case TFM_MODAL_RESIZE:
 				/* only switch when... */
 				if (ELEM5(t->mode, TFM_ROTATION, TFM_TRANSLATION, TFM_TRACKBALL, TFM_EDGE_SLIDE, TFM_VERT_SLIDE)) {
+
+					/* Scale isn't normally very useful after extrude along normals, see T39756 */
+					if ((t->con.mode & CON_APPLY) && (t->con.orientation == V3D_MANIP_NORMAL)) {
+						stopConstraint(t);
+					}
+
 					resetTransModal(t);
 					resetTransRestrictions(t);
 					restoreTransObjects(t);
